--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <th><input type="text" name="total" id="total" placeholder="ex: 34.020"></th>
                  </tr>
              </table> <br>
-        </div> <hr>
+        </div>
 <!-- Usuário irá inserir os defeitos encontrados-->   
         <div class="defeitos">
             <h2 class="subtitulo"> &#x1F6AB; DEFEITOS </h2>
@@ -179,7 +179,7 @@
                     <th> <textarea name="obs-foto12" id="obs-foto12" cols="30" rows="5" placeholder="Comentário:"></textarea> </th>
                 </tr>
             </table>
-        </div> <br> <hr>
+        </div> <br>
 <!-- Aqui será inserido informações da macro 20 (tempos)-->
         <div>
             <h2>MACRO 20</h2>
@@ -234,7 +234,7 @@
                     <th><input type="time" name="tempo-mp" id="tempo-mp"></th>
                     <th><input type="text" name="motivo-mp" id="motivo-mp" placeholder="Motivo do evento"></th>
                 </tr>
-            </table> <br> <hr>
+            </table> <br>
         </div> <br>
 
         <div class="consideracoes">
@@ -301,7 +301,7 @@
                         <th id="kmfinal-resposta"></th>
                         <th id="total-resposta"></th>
                     </tr>
-                </table> <br> <hr>
+                </table> <br> 
 
         <h2>DEFEITOS</h2>
             <p>Pontos de defeitos, restrições e interdições:</p>
@@ -326,7 +326,7 @@
                         <th id="p1-resposta"></th>
                         <th id="p2-resposta"></th>
                     </tr>
-                </table><br><hr><br>
+                </table><br><br>
 
         <h2>EVIDÊNCIAS</h2>
             <P>Evidências de pontos críticos encontrados:</P>
@@ -371,7 +371,7 @@
                         <th id="obs-resposta11"></th>
                         <th id="obs-resposta12"></th>
                     </tr>
-                </table> <br><hr><br>
+                </table> <br><br>
 
         <h2>MACRO 20</h2>
                 <table>
@@ -416,7 +416,7 @@
                         <th id="resposta-mp"></th>
                         <th id="resposta-motivo-mp"></th>
                     </tr>
-                </table> <br> <hr> <br>
+                </table> <br><br>
 
             <h2>OBSERVAÇÕES</h2>
             <div class="observ-resposta">
