--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <th><input type="number" name="num-p2" id="num-p2" placeholder="qntd. de P2"></th>
                     </tr>
                 </table>          
-        </div> <br> <hr>
+        </div> <br>
 <!-- Usuário irá inserir imagens da inspeção-->
     <h2 class="subtitulo">EVIDÊNCIAS</h2>
         <P>Anexe evidências da inspeção:</P> <br>
