--- a/index.html
+++ b/index.html
@@ -255,10 +255,6 @@
         gerarpdf31(),gerarpdf32(),gerarpdf33(),gerarpdf34(),gerarpdf35(),gerarpdf36(),gerarpdf37(),gerarpdf38(),gerarpdf39(),gerarpdf40(),
         gerarpdf41(),gerarpdf42(),gerarpdf43(),gerarpdf44(),criarpdf(),print()">
     </fieldset> <br>
-
-    <p> Ainda falta não acoplamento </p>
-    <p> tipo_data_supervisao_kmincial_kmfinal </p>
-    <p> ex: us_17012022_ribeiraopreto_EPV_EBA_EBU.pdf</p>
     
 <!-------------------------------->   
 <!-- Relatório que será impresso-->
@@ -326,11 +322,11 @@
                         <th id="p1-resposta"></th>
                         <th id="p2-resposta"></th>
                     </tr>
-                </table><br><br>
+                </table> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
 
         <h2>EVIDÊNCIAS</h2>
             <P>Evidências de pontos críticos encontrados:</P>
-                <table class="evidencias">
+                <table class="evidencias"> 
                     <tr>
                         <th> <img src="" alt="" id="preview-image011" class="preview"> </th>
                         <th> <img src="" alt="" id="preview-image21" class="preview"> </th>
@@ -371,7 +367,7 @@
                         <th id="obs-resposta11"></th>
                         <th id="obs-resposta12"></th>
                     </tr>
-                </table> <br><br>
+                </table> <br> <br> <br> <br> <br> <br>
 
         <h2>MACRO 20</h2>
                 <table>
