--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                         <th id="p1-resposta"></th>
                         <th id="p2-resposta"></th>
                     </tr>
-                </table> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+                </table> <br> <br> <br>
 
         <h2>EVIDÊNCIAS</h2>
             <P>Evidências de pontos críticos encontrados:</P>
@@ -367,7 +367,7 @@
                         <th id="obs-resposta11"></th>
                         <th id="obs-resposta12"></th>
                     </tr>
-                </table> <br> <br> <br> <br> <br> <br>
+                </table> <br> <br>
 
         <h2>MACRO 20</h2>
                 <table>
